java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javaDoc/SeeConstants.java
public class SeeConstants {
  public static final String III = "";
  public static final String UUU = "";

  /**
   * @see SeeConstants.<error descr="Cannot resolve symbol 'SeeConstants.III'">III</error>
   * @see SeeConstants#UUU
   * @param args blah-blah
   */
  public static void main(String[] args) { }
}